added data-grid page

--- a/src/app/core/shell/shell.component.html
+++ b/src/app/core/shell/shell.component.html
@@ -53,6 +53,10 @@
           <span translate>Css Grid</span>
         </a>
         <mat-divider></mat-divider>
+        <a mat-list-item routerLink="/data-grid" routerLinkActive="active" (click)="isMobile && sidenav.close()">
+          <span translate>Data Grid</span>
+        </a>
+        <mat-divider></mat-divider>
       </mat-nav-list>
     </mat-sidenav>
     <mat-sidenav-content class="light-theme">
