--- a/src/app/data-grid/data-grid.component.html
+++ b/src/app/data-grid/data-grid.component.html
@@ -4,8 +4,13 @@
       <mat-card-title translate>APP_NAME</mat-card-title>
     </h1>
     <mat-card-content>
-      <mat-icon>code</mat-icon>
-      <span translate>Version</span> {{version}}
+      <dx-data-grid [dataSource]="customers">
+          <dxi-column dataField="CompanyName"></dxi-column>
+          <dxi-column dataField="City"></dxi-column>
+          <dxi-column dataField="State"></dxi-column>
+          <dxi-column dataField="Phone"></dxi-column>
+          <dxi-column dataField="Fax"></dxi-column>
+      </dx-data-grid>
     </mat-card-content>
   </mat-card>
 </div>
