--- a/src/app/data-grid/data-grid.component.scss
+++ b/src/app/data-grid/data-grid.component.scss
@@ -1,8 +1,28 @@
 .container {
-  text-align: center;
+  text-align: left;
   padding: 1rem;
 }
 
-.mat-icon {
+h1 {
+  text-align: center;
+}
+
+.options {
+  padding: 20px;
+  margin-top: 20px;
+  background-color: rgba(191, 191, 191, 0.15);
+}
+.caption {
+  font-size: 18px;
+  font-weight: 500;
+}
+.option {
+  margin-top: 10px;
+}
+.option > span {
+  margin-right: 10px;
+}
+.option > .dx-selectbox {
+  display: inline-block;
   vertical-align: middle;
 }
