--- a/src/main.scss
+++ b/src/main.scss
@@ -29,5 +29,8 @@
   @include angular-material-theme($app-theme);
 }
 
+@import "../node_modules/devextreme/dist/css/dx.common.css";
+@import "../node_modules/devextreme/dist/css/dx.android5.light.css";
+
 // Theme customization
 @import "theme/theme";
