--- a/src/app/core/shell/shell.component.html
+++ b/src/app/core/shell/shell.component.html
@@ -1,65 +1,70 @@
 <div class="container">
-  <div>
-    <mat-toolbar>
-      <button class="menu-button" mat-icon-button (click)="sidenav.toggle()">
-        <mat-icon>menu</mat-icon>
-      </button>
-      <span translate>APP_NAME</span>
-      <div fxFlex></div>
-      <div>
-        <button mat-icon-button [matMenuTriggerFor]="userMenu" translate>
-          <mat-icon>person</mat-icon>
-        </button>
-        <mat-menu #userMenu="matMenu">
-          <mat-nav-list>
-            <mat-list-item>
-              <span translate>Logged in as</span>&nbsp;<b>{{username}}</b>
-            </mat-list-item>
-            <mat-divider></mat-divider>
-          </mat-nav-list>
-          <button mat-menu-item (click)="logout()" translate>Logout</button>
-        </mat-menu>
-      </div>
-      <div>
-        <button mat-icon-button [matMenuTriggerFor]="languageMenu">
-          <mat-icon>language</mat-icon>
-        </button>
-        <mat-menu #languageMenu="matMenu">
-          <button mat-menu-item *ngFor="let language of languages" (click)="setLanguage(language)">
-            {{language}}
-          </button>
-        </mat-menu>
-      </div>
-    </mat-toolbar>
-  </div>
+
   <mat-sidenav-container>
-    <mat-sidenav #sidenav [mode]="isMobile ? 'over' : 'side'" [opened]="!isMobile" [disableClose]="!isMobile"
-                ngClass.gt-sm="has-border" [fixedInViewport]="isMobile">
+    <mat-sidenav #sidenav class="dark-theme" [mode]="isMobile ? 'over' : 'side'" [opened]="!isMobile" [disableClose]="!isMobile"
+                ngClass.gt-sm="has-border" [fixedInViewport]="true">
+      <div class="logo">
+        <img src="assets/logo-branco.svg" alt="XP Investimentos"/>
+      </div>
       <mat-nav-list>
-        <mat-divider></mat-divider>
         <a mat-list-item routerLink="/home" routerLinkActive="active" (click)="isMobile && sidenav.close()">
-          <span translate>Home</span>
+          <span translate><mat-icon>code</mat-icon> Home</span>
         </a>
         <mat-divider></mat-divider>
         <a mat-list-item routerLink="/about" routerLinkActive="active" (click)="isMobile && sidenav.close()">
-          <span translate>About</span>
+          <span translate><mat-icon>info_outline</mat-icon> About</span>
         </a>
         <mat-divider></mat-divider>
         <a mat-list-item routerLink="/sample" routerLinkActive="active" (click)="isMobile && sidenav.close()">
-          <span translate>Sample Form</span>
+          <span translate><mat-icon>web_asset</mat-icon> Sample Form</span>
         </a>
         <mat-divider></mat-divider>
         <a mat-list-item routerLink="/grid" routerLinkActive="active" (click)="isMobile && sidenav.close()">
-          <span translate>Css Grid</span>
+          <span translate><mat-icon>web_asset</mat-icon> Css Grid</span>
         </a>
         <mat-divider></mat-divider>
         <a mat-list-item routerLink="/data-grid" routerLinkActive="active" (click)="isMobile && sidenav.close()">
-          <span translate>Data Grid</span>
+          <span translate><mat-icon>web_asset</mat-icon> Data Grid</span>
         </a>
         <mat-divider></mat-divider>
       </mat-nav-list>
     </mat-sidenav>
-    <mat-sidenav-content class="light-theme">
+    <mat-sidenav-content>
+      <div class="header-container">
+        <mat-toolbar class="header">
+          <div class="header-left">
+            <button class="menu-button" mat-icon-button (click)="sidenav.toggle()">
+              <mat-icon>menu</mat-icon>
+            </button>
+          </div>
+          <div class="header-right">
+            <div>
+              <button mat-icon-button [matMenuTriggerFor]="userMenu" translate>
+                <mat-icon>person</mat-icon>
+              </button>
+              <mat-menu #userMenu="matMenu">
+                <mat-nav-list>
+                  <mat-list-item>
+                    <span translate>Logged in as</span>&nbsp;<b>{{username}}</b>
+                  </mat-list-item>
+                  <mat-divider></mat-divider>
+                </mat-nav-list>
+                <button mat-menu-item (click)="logout()" translate>Logout</button>
+              </mat-menu>
+            </div>
+            <div>
+              <button mat-icon-button [matMenuTriggerFor]="languageMenu">
+                <mat-icon>language</mat-icon>
+              </button>
+              <mat-menu #languageMenu="matMenu">
+                <button mat-menu-item *ngFor="let language of languages" (click)="setLanguage(language)">
+                  {{language}}
+                </button>
+              </mat-menu>
+            </div>
+          </div>
+        </mat-toolbar>
+      </div>
       <router-outlet></router-outlet>
     </mat-sidenav-content>
   </mat-sidenav-container>
