--- a/src/app/core/shell/shell.component.scss
+++ b/src/app/core/shell/shell.component.scss
@@ -8,25 +8,65 @@
   right: 0;
 }
 
+.mat-icon {
+  vertical-align: middle;
+}
+
+.logo {
+  height: 64px;
+  border-bottom: 3px solid #FFC709;
+
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
+
+@media (max-width: 600px) {
+  .logo {
+      height: 56px;
+  }
+}
+
+.header-container {
+  height: 65px;
+}
+
+.header,
+.header-left,
+.header-right {
+  display: flex;
+  justify-content: space-between;
+}
+
+.header {
+  border-bottom: 3px solid #FFC709;
+  position: fixed;
+  z-index: 2;
+}
+
 .is-mobile .header {
   position: fixed;
   /* Make sure the toolbar will stay on top of the content as it scrolls past. */
   z-index: 2;
 }
 
-mat-sidenav-container {
+.mat-sidenav-container {
   /* When the sidenav is not fixed, stretch the sidenav container to fill the available space. This
      causes `<mat-sidenav-content>` to act as our scrolling element for desktop layouts. */
   flex: 1;
 }
 
-.is-mobile mat-sidenav-container  {
+.is-mobile .mat-sidenav-container  {
   /* When the sidenav is fixed, don't constrain the height of the sidenav container. This allows the
      `<body>` to be our scrolling element for mobile layouts. */
   flex: 1 0 auto;
 }
 
-mat-sidenav {
+.mat-sidenav {
   min-width: 270px;
   max-width: 28%;
+  background: #191411;
+  color: white;
 }
+
