--- a/src/app/core/shell/shell.component.html
+++ b/src/app/core/shell/shell.component.html
@@ -29,7 +29,7 @@
         <mat-divider></mat-divider>
       </mat-nav-list>
     </mat-sidenav>
-    <mat-sidenav-content>
+    <mat-sidenav-content [ngClass]="{'opened': sidenav.opened && !isMobile}">
       <mat-toolbar class="header">
         <div class="header-left">
           <button class="menu-button" mat-icon-button (click)="sidenav.toggle()">
