--- a/src/app/core/shell/shell.component.html
+++ b/src/app/core/shell/shell.component.html
@@ -31,36 +31,33 @@
     </mat-sidenav>
     <mat-sidenav-content [ngClass]="{'opened': sidenav.opened && !isMobile}">
       <mat-toolbar class="header">
-        <div class="header-left">
-          <button class="menu-button" mat-icon-button (click)="sidenav.toggle()">
-            <mat-icon>menu</mat-icon>
+        <button class="menu-button" mat-icon-button (click)="sidenav.toggle()">
+          <mat-icon>menu</mat-icon>
+        </button>
+        <span class="spacer"></span>
+        <div>
+          <button mat-icon-button [matMenuTriggerFor]="userMenu" translate>
+            <mat-icon>person</mat-icon>
           </button>
+          <mat-menu #userMenu="matMenu">
+            <mat-nav-list>
+              <mat-list-item>
+                <span translate>Logged in as</span>&nbsp;<b>{{username}}</b>
+              </mat-list-item>
+              <mat-divider></mat-divider>
+            </mat-nav-list>
+            <button mat-menu-item (click)="logout()" translate>Logout</button>
+          </mat-menu>
         </div>
-        <div class="header-right">
-          <div>
-            <button mat-icon-button [matMenuTriggerFor]="userMenu" translate>
-              <mat-icon>person</mat-icon>
+        <div>
+          <button mat-icon-button [matMenuTriggerFor]="languageMenu">
+            <mat-icon>language</mat-icon>
+          </button>
+          <mat-menu #languageMenu="matMenu">
+            <button mat-menu-item *ngFor="let language of languages" (click)="setLanguage(language)">
+              {{language}}
             </button>
-            <mat-menu #userMenu="matMenu">
-              <mat-nav-list>
-                <mat-list-item>
-                  <span translate>Logged in as</span>&nbsp;<b>{{username}}</b>
-                </mat-list-item>
-                <mat-divider></mat-divider>
-              </mat-nav-list>
-              <button mat-menu-item (click)="logout()" translate>Logout</button>
-            </mat-menu>
-          </div>
-          <div>
-            <button mat-icon-button [matMenuTriggerFor]="languageMenu">
-              <mat-icon>language</mat-icon>
-            </button>
-            <mat-menu #languageMenu="matMenu">
-              <button mat-menu-item *ngFor="let language of languages" (click)="setLanguage(language)">
-                {{language}}
-              </button>
-            </mat-menu>
-          </div>
+          </mat-menu>
         </div>
       </mat-toolbar>
       <router-outlet class="content"></router-outlet>
