removed flex form sample from sidebar

--- a/src/app/core/shell/shell.component.html
+++ b/src/app/core/shell/shell.component.html
@@ -14,13 +14,13 @@
         <a mat-list-item routerLink="/about" routerLinkActive="active" (click)="isMobile && sidenav.close()">
           <span translate><mat-icon>info_outline</mat-icon> About</span>
         </a>
-        <mat-divider></mat-divider>
+        <!-- <mat-divider></mat-divider>
         <a mat-list-item routerLink="/sample" routerLinkActive="active" (click)="isMobile && sidenav.close()">
           <span translate><mat-icon>web_asset</mat-icon> Sample Form</span>
-        </a>
+        </a> -->
         <mat-divider></mat-divider>
         <a mat-list-item routerLink="/grid" routerLinkActive="active" (click)="isMobile && sidenav.close()">
-          <span translate><mat-icon>web_asset</mat-icon> Css Grid</span>
+          <span translate><mat-icon>web_asset</mat-icon> Sample Form</span>
         </a>
         <mat-divider></mat-divider>
         <a mat-list-item routerLink="/data-grid" routerLinkActive="active" (click)="isMobile && sidenav.close()">
